--- a/config/src/main/resources/application.yml
+++ b/config/src/main/resources/application.yml
@@ -1,7 +1,7 @@
-###\u914D\u7F6E\u4E2D\u5FC3\u7684\u7AEF\u53E3\u53F7
+###配置中心的端口号
 server:
   port: 8888
-###\u670D\u52A1\u522B\u540D\uFF08\u670D\u52A1\u6CE8\u518C\u5230\u6CE8\u518C\u4E2D\u5FC3\u7684\u540D\u5B57\uFF09\u6CE8\u610F\uFF1A\u522B\u540D\u5343\u4E07\u4E0D\u80FD\u5305\u542B\u4E0B\u5212\u7EBF\uFF0C\u4E0D\u7136\u670D\u52A1\u8C03\u7528\u65F6\uFF0C\u4F7F\u7528\u522B\u540D\u4F1A\u62A5\u9519\u627E\u4E0D\u5230url
+###服务别名（服务注册到注册中心的名字）注意：别名千万不能包含下划线，不然服务调用时，使用别名会报错找不到url
 spring:
   application:
     name: config-server
@@ -9,22 +9,22 @@ spring:
     config:
       server:
         git:
-          ###Git\u7684\u5730\u5740
+          ###Git的地址
           uri: https://gitee.com/liqiye1/springcloud_Config.git
-          ###Git\u9879\u76EE\u91CC\u9762\u7684\u6587\u4EF6\u5939\u540D
+          ###Git项目里面的文件夹名
           search-paths:
           - config
-          ###\u5982\u679C\u8FD9\u4E2AGit\u9879\u76EE\u8BBE\u7F6E\u4E86\u79C1\u6709,\u5FC5\u987B\u8981\u586B\u5199\u7528\u6237\u540D\u5BC6\u7801\uFF08\u4F60\u8FD9\u4E2AGit\u4ED3\u5E93\u5BF9\u5E94\u7684\u7528\u6237\u540D\u5BC6\u7801\uFF09
+          ###如果这个Git项目设置了私有,必须要填写用户名密码（你这个Git仓库对应的用户名密码）
           #username: 1159140456@qq.com
           #password: 13556975841Lqy
-      ###\u5206\u652F\u540D
+      ###分支名
       label: master
 eureka:
   client:
     service-url:
-      ###\u5F53\u524D\u914D\u7F6E\u4E2D\u5FC3\u670D\u52A1\u6CE8\u518C\u5230\u7684\u6307\u5B9A\u6CE8\u518C\u4E2D\u5FC3rureka\uFF08\u5982\u679C\u662F\u96C6\u7FA4\u7684\u6CE8\u518C\u4E2D\u5FC3\uFF0C\u7528\u9017\u53F7\u5206\u9694\u5F00\uFF09
+      ###当前配置中心服务注册到的指定注册中心rureka（如果是集群的注册中心，用逗号分隔开）
       defaultZone: http://localhost:8761/eureka/,http://localhost:9761/eureka/
-    ###\u9700\u8981\u5C06\u6211\u7684\u670D\u52A1\u6CE8\u518C\u5230rureka\u4E0A
+    ###需要将我的服务注册到rureka上
     register-with-eureka: true
-    ###\u9700\u8981\u68C0\u7D22\u670D\u52A1
+    ###需要检索服务
     fetch-registry: true
